Small margin change, didnt commit before

--- a/src/index.html
+++ b/src/index.html
@@ -144,7 +144,7 @@
                             >Big Dot</span
                         >
                         <svg
-                            class="mx-2 size-5 text-gray-800 dark:text-white"
+                            class="mx-2 mt-1 size-5 text-gray-800 dark:text-white"
                             aria-hidden="true"
                             xmlns="http://www.w3.org/2000/svg"
                             viewBox="0 0 20 18"
