--- a/src/index.html
+++ b/src/index.html
@@ -281,6 +281,39 @@
                         color: #6b7280; /* Adjust color based on your design */
                     }
 
+                    @keyframes bounce {
+                        0%,
+                        20%,
+                        50%,
+                        80%,
+                        100% {
+                            transform: translateY(0);
+                        }
+                        40% {
+                            transform: translateY(-5px);
+                        }
+                        60% {
+                            transform: translateY(-3px);
+                        }
+                    }
+
+                    .typing-indicator span {
+                        display: inline-block;
+                        animation: bounce 1s infinite;
+                    }
+
+                    .typing-indicator span:nth-child(1) {
+                        animation-delay: 0.1s;
+                    }
+
+                    .typing-indicator span:nth-child(2) {
+                        animation-delay: 0.2s;
+                    }
+
+                    .typing-indicator span:nth-child(3) {
+                        animation-delay: 0.3s;
+                    }
+
                     /* Add or customize other styles as needed */
                 </style>
                 <div
