Fixed loading animation
- Animation now correctly only plays when the app is actively loading in new files

- animation also exits incase of error AND will properly fucntion if user loads more folders

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,8 @@
 
                 <div
                     role="status"
-                    class="my-2 max-w-md animate-pulse space-y-4 divide-y divide-gray-200 rounded border border-gray-200 p-4 shadow md:p-6 dark:divide-gray-700 dark:border-gray-700"
+                    id="loadingAnimation"
+                    class="my-2 hidden max-w-md animate-pulse space-y-4 divide-y divide-gray-200 rounded border border-gray-200 p-4 shadow md:p-6 dark:divide-gray-700 dark:border-gray-700"
                 >
                     <div class="flex items-center justify-between">
                         <div>
