Added the ability to scroll on the file tree properly
It was one little css property lol

--- a/src/index.html
+++ b/src/index.html
@@ -122,7 +122,7 @@
                 <div id="sidebar" class="no-horizontal-scroll">
                     <!-- Sidebar content will be dynamically generated using JavaScript -->
                 </div>
-                <div id="fileTree" class="no-horizontal-scroll">
+                <div id="fileTree" class="no-horizontal-scroll overflow-y-auto">
                     <!-- File tree content goes here -->
                 </div>
                 <div
