--- a/src/index.html
+++ b/src/index.html
@@ -315,6 +315,11 @@
                     .typing-indicator span:nth-child(3) {
                         animation-delay: 0.3s;
                     }
+                    .rotate-90 {
+                        transform: rotate(90deg);
+                        transform-origin: center; /* Set the transform origin to the center of the element */
+                        transition: transform 0.3s ease; /* Adjust the transition duration and easing as needed */
+                    }
 
                     /* Add or customize other styles as needed */
                 </style>
