minimal ui changes to title stuff

--- a/src/index.html
+++ b/src/index.html
@@ -15,22 +15,22 @@
                 id="menu-side"
                 class="flex h-full w-1/5 flex-col justify-between border-x border-gray-400 bg-gray-50"
             >
-                <div class="flex justify-between">
+                <div class="flex items-center justify-between">
                     <h1
                         id="title"
-                        class="mx-1.5 my-1.5 text-2xl font-bold dark:text-white"
+                        class="mx-3 my-2 text-2xl font-bold dark:text-white"
                     >
                         My Documents
                     </h1>
                     <button
                         id="selectDirectoryButton"
-                        class="group relative my-1.5 me-2 ml-1 inline-flex h-11 items-center justify-center overflow-hidden rounded-lg bg-gradient-to-br from-cyan-500 to-blue-500 text-sm font-medium text-gray-900 shadow-md hover:text-white focus:border-none focus:outline-none group-hover:from-cyan-500 group-hover:to-blue-500 dark:text-white dark:focus:ring-cyan-800"
+                        class="group relative my-1.5 me-2 ml-1 inline-flex h-9 items-center justify-center overflow-hidden rounded-lg bg-gradient-to-br from-cyan-500 to-blue-500 text-xs font-medium text-gray-900 shadow-md hover:text-white focus:border-none focus:outline-none group-hover:from-cyan-500 group-hover:to-blue-500 dark:text-white dark:focus:ring-cyan-800"
                     >
                         <span
-                            class="relative rounded-md bg-white px-1 py-2.5 transition-all duration-75 ease-in group-hover:bg-opacity-0 dark:bg-gray-900"
+                            class="relative rounded-md bg-white px-1 py-2 transition-all duration-75 ease-in group-hover:bg-opacity-0 dark:bg-gray-900"
                         >
                             <svg
-                                class="h-6 w-8 text-gray-800 dark:text-white"
+                                class="h-5 w-7 text-gray-800 dark:text-white"
                                 aria-hidden="true"
                                 xmlns="http://www.w3.org/2000/svg"
                                 fill="currentColor"
@@ -43,6 +43,7 @@
                         </span>
                     </button>
                 </div>
+
                 <hr class="my-2 h-px border-0 bg-gray-200 dark:bg-gray-700" />
 
                 <div
