--- a/src/index.html
+++ b/src/index.html
@@ -195,7 +195,7 @@
                 <!-- Content of the 80% width container -->
                 <div
                     id="chat-container"
-                    class="flex h-[90vh] flex-grow transform flex-col-reverse overflow-y-auto bg-cover bg-center transition-transform duration-500 ease-in-out"
+                    class="flex h-[90vh] flex-grow transform flex-col-reverse overflow-y-auto overflow-x-hidden bg-cover bg-center transition-transform duration-500 ease-in-out"
                 >
                     <!-- Add these classes to your HTML elements -->
                     <div
