pop up animation for messages

--- a/src/index.html
+++ b/src/index.html
@@ -212,6 +212,17 @@
                         margin-left: auto;
                         margin-right: auto;
                         overflow: hidden; /* Ensure overflow is hidden for rounded corners */
+                        animation: fadeIn 0.3s ease-in-out;
+                    }
+                    @keyframes fadeIn {
+                        from {
+                            opacity: 0;
+                            transform: translateY(10px);
+                        }
+                        to {
+                            opacity: 1;
+                            transform: translateY(0);
+                        }
                     }
 
                     .user-content-container {
