file tree text truncation
file names now are properly cut off if they are too long

--- a/src/index.html
+++ b/src/index.html
@@ -318,6 +318,11 @@
                         transform-origin: center; /* Set the transform origin to the center of the element */
                         transition: transform 0.3s ease; /* Adjust the transition duration and easing as needed */
                     }
+                    .file-name {
+                        overflow: hidden;
+                        white-space: nowrap;
+                        text-overflow: ellipsis;
+                    }
 
                     /* Add or customize other styles as needed */
                 </style>
