send button change
also returned docdot kwargs to 2, kwargs 1 is better at very specific answers but 2 allows for a better understanding of the concepts its trying to answer

--- a/src/index.html
+++ b/src/index.html
@@ -347,28 +347,29 @@
                     <button
                         id="send-button"
                         onclick="sendMessage('')"
-                        class="0 group relative me-2 ml-1 mt-3 inline-flex h-11 items-end justify-end overflow-hidden rounded-lg bg-gradient-to-br from-cyan-500 to-blue-500 p-0.5 text-sm font-medium text-gray-900 shadow-md hover:text-white focus:border-none focus:outline-none group-hover:from-cyan-500 group-hover:to-blue-500 dark:text-white dark:focus:ring-cyan-800"
-                    >
+                        class="0 group relative me-2 ml-1 mt-3 inline-flex h-11 items-end justify-end overflow-hidden rounded-lg border border-black shadow-md bg-white text-gray-900 hover:bg-black hover:text-white transition-all duration-75 ease-in"
+                        >
                         <span
-                            class="relative rounded-md bg-white px-5 py-2.5 transition-all duration-75 ease-in group-hover:bg-opacity-0 dark:bg-gray-900"
+                            class="relative rounded-md px-5 py-2.5 transition-all duration-75 ease-in group-hover:bg-opacity-0"
                         >
                             <svg
-                                class="h-5 w-5 text-gray-800 dark:text-white"
-                                aria-hidden="true"
-                                xmlns="http://www.w3.org/2000/svg"
-                                fill="none"
-                                viewBox="0 0 10 14"
+                            class="h-5 w-5 transition-all duration-75 ease-in"
+                            aria-hidden="true"
+                            xmlns="http://www.w3.org/2000/svg"
+                            fill="none"
+                            viewBox="0 0 10 14"
                             >
-                                <path
-                                    stroke="currentColor"
-                                    stroke-linecap="round"
-                                    stroke-linejoin="round"
-                                    stroke-width="2"
-                                    d="M5 13V1m0 0L1 5m4-4 4 4"
-                                />
+                            <path
+                                stroke="currentColor"
+                                stroke-linecap="round"
+                                stroke-linejoin="round"
+                                stroke-width="2"
+                                d="M5 13V1m0 0L1 5m4-4 4 4"
+                            />
                             </svg>
                         </span>
-                    </button>
+                        </button>
+
                 </div>
             </div>
         </div>
